in the libxml2 structures.

The implementation of this uncovered a couple of subtle errors in the
general XML handling within sync-engine. These have been fixed, and the
entire pathway will be checked when airsync.py is cleaned up shortly.

Attribute processing is badly broken in the wbxml implementation - this
is not a problem for sync-engine as AirSync does not use attributes
in its XML code. However this should be fixed up (can be as a low priority
job) at some point for completeness and in case Microsoft go and change
things at a later date.

06/02/2008 - 1931 Dr J A Gow
----------------------------

Fixed exception caused by typo in commonconv.py (OS30) - unchanged
time handler in <until> tags in recurrence rules.

07/02/2008 - 200600 Dr J A Gow
------------------------------

Corrected namespace error in formats30 preventing contacts with notes being
correctly synced to the device.

08/02/2008 - 202500 Dr J A Gow
------------------------------

Fixed syncing of yearly recurrent events from Opensync to Airsync for both
Opensync formats. Also fixed up the test scripts event_air2os.py and
event_os2air.py - this is temporary as the format conversion test scripts
are to be overhauled completely soon.

24/02/2008 - 130700 Dr J A Gow
------------------------------

Fixed typo in _CheckDeviceConnected leading to confusing exceptions being
generated when tools are run without a device connected.

Considerably improved error handling in the tools. Errors such as
sync-engine not running, devices not connected and the like are handled
cleanly and generate informative error messages. Added usage string to
create_partnerships. This should prevent tracebacks being displayed to
the user unless there really is an error, as opposed to bad input or
configuration.

This will hopefully reduce the number of bug reports caused by issues
such as sync-engine not running, or a device not connected correctly.
Updates to errors.py augment the error handling structure.


